test-output/src/tests/snapshots/test_output__tests__output__echo_function.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

pub fn main() {
  echo fn(n) { n + 1 }
  echo private
}

fn private() {
  1
}


--- gleam run output ----------------
[90msrc/main.gleam:5[39m
//fn(a) { ... }
[90msrc/main.gleam:6[39m
//fn() { ... }
