test-output/src/tests/snapshots/test_output__tests__output__echo_importing_module_named_inspect.snap
---
source: test-output/src/tests/output.rs
expression: output
---
--- main.gleam ----------------------
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2024 The Gleam contributors

import inspect

pub fn main() {
  echo inspect.x
}


--- gleam run output ----------------
[90msrc/main.gleam:7[39m
Nil
